styling the sign in pages

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,9 +12,11 @@
   </head>
 
   <body>
-    <main class="container mx-auto mt-28 px-5 flex">
-      <p class="notice"><%= notice %></p>
-       <p class="alert"><%= alert %></p>
+    <main class="m-6">
+      <div class="text-center">
+        <p class="notice"><%= notice %></p>
+        <p class="alert"><%= alert %></p>
+       </div>
       <%= yield %>
     </main>
   </body>
