--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,25 +1,25 @@
 <div class="container">
-  <h2>Sign up</h2>
+  <h2 class="text-center m-4 font-semibold">Sign up</h2>
 
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
     <%= render "devise/shared/error_messages", resource: resource %>
 
-    <div class="field">
+    <div class="field text-center m-2">
       <%= f.label :email %><br />
       <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
     </div>
 
-    <div class="field">
+    <div class="field text-center m-2">
       <%= f.label :first_name %><br />
       <%= f.email_field :first_name %>
     </div>
 
-    <div class="field">
+    <div class="field text-center m-2">
       <%= f.label :last_name %><br />
       <%= f.email_field :last_name %>
     </div>
 
-    <div class="field">
+    <div class="field text-center m-2">
       <%= f.label :password %>
       <% if @minimum_password_length %>
       <em>(<%= @minimum_password_length %> characters minimum)</em>
@@ -27,15 +27,17 @@
       <%= f.password_field :password, autocomplete: "new-password" %>
     </div>
 
-    <div class="field">
+    <div class="field text-center m-2">
       <%= f.label :password_confirmation %><br />
       <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
     </div>
 
-    <div class="actions">
+    <div class="actions text-center m-2">
       <%= f.submit "Sign up" %>
     </div>
   <% end %>
 
-  <%= render "devise/shared/links" %>
+  <div class="text-center m-2">
+    <%= render "devise/shared/links" %>
+  </div>
 </div>
