added sign out functionality

--- a/app/views/pages/home.erb
+++ b/app/views/pages/home.erb
@@ -1,3 +1,5 @@
+<%= link_to "Sign out", destroy_user_session_path, data: { turbo_method: :delete } %>
+
 <h1 class="italic">this is home page</h1>
 <%= month_calendar do |date| %>
   <%= date %>
