--- a/app/views/pages/home.erb
+++ b/app/views/pages/home.erb
@@ -1,6 +1,17 @@
 <%= link_to "Sign out", destroy_user_session_path, data: { turbo_method: :delete } %>
+<div class="user_name">
+  <p>User:</p>
+  <%= current_user.first_name %>
+  <%= current_user.last_name %>
+</div>
 
 <h1 class="italic">this is home page</h1>
-<%= month_calendar do |date| %>
+<%= month_calendar events: @days do |date, days| %>
   <%= date %>
+  <% days.each do |day| %>
+    <div>
+     <%= day.user.first_name%>
+     <%= day.available? %>
+    </div>
+  <% end %>
 <% end %>
