--- a/app/views/pages/home.erb
+++ b/app/views/pages/home.erb
@@ -1,16 +1,16 @@
 <%= link_to "Sign out", destroy_user_session_path, data: { turbo_method: :delete } %>
 <div class="user_name">
-  <p>User:</p>
-  <%= current_user.first_name %>
-  <%= current_user.last_name %>
+  <u><p>User:</p></u>
+  <%= @user.first_name %>
+  <%= @user.last_name %>
 </div>
 
-<%= month_calendar events: @days do |date, days| %>
-  <%= date %>
-  <% days.each do |day| %>
-    <div>
-     <%= day.user.first_name%>
-     <%= day.available? %>
-    </div>
-  <% end %>
-<% end %>
+
+<div class="m-4">
+  <h2>This is the home page</h2>
+</div>
+
+<div class="m-4">
+  <u><p>New Calendar</p></u>
+  <%= link_to "create a new calendar", new_calendar_path%>
+</div>
